started initial work on the CharacterManager which will eventually control most of the hero related stuff in the game

--- a/Text_Town_Game/Text_Town_Game/Text_Town_Game.vcxproj
+++ b/Text_Town_Game/Text_Town_Game/Text_Town_Game.vcxproj
@@ -64,7 +64,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CharacterManager.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CharacterManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
