added new files and start to shift towards a new menu system

--- a/Text_Town_Game/Text_Town_Game/Text_Town_Game.vcxproj.filters
+++ b/Text_Town_Game/Text_Town_Game/Text_Town_Game.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="CharacterManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Menu_System.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CharacterManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Defines.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Menu_System.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
