--- a/Text_Town_Game/Text_Town_Game/Text_Town_Game.vcxproj
+++ b/Text_Town_Game/Text_Town_Game/Text_Town_Game.vcxproj
@@ -66,9 +66,12 @@
   <ItemGroup>
     <ClCompile Include="CharacterManager.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Menu_System.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CharacterManager.h" />
+    <ClInclude Include="Defines.h" />
+    <ClInclude Include="Menu_System.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
